# gitstream

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml
.github/workflows/: cargo-publish.yml  release.yml
benches/: diff.rs  render.rs
plans/: LITE-PLANNING-APPROACH.md  STRUCTURED-PLANNING-APPROACH.md  bugs.md
plans/mvp/: mvp.md
plans/polish/: polish.md
plans/sidebar/: sidebar.md
src/: app.rs  diff.rs  error.rs  lib.rs  main.rs  render.rs  state.rs  watcher.rs
src/render/: draw.rs  edit.rs  input.rs  term.rs  view.rs
tests/: keys.rs  smoke.rs  wrap.rs
