[package]
name = "gitstream"
version = "0.1.0"
edition = "2024"
description = "Real-time git diff watcher — scrolling diffs ordered by file mtime"
license = "MIT"
repository = "https://github.com/alchemainhub/gitstream"
authors = ["Bilal Bhatti"]
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
gix = { version = "0.83.0", default-features = false, features = ["max-performance-safe", "sha1", "status", "blob-diff", "dirwalk", "excludes", "attributes"] }
humantime = "2.3.0"
imara-diff = "0.2.0"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
ratatui = "0.30.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
unicode-width = "0.2.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[dev-dependencies]
criterion = "0.8.2"
tempfile = "3.27.0"

[[bench]]
name = "diff"
harness = false

[[bench]]
name = "render"
harness = false
